2012-07-31  Jim Fowler  <jrf@Biblion>

	* Data/Testing/entry.py (AJBentry.MakeAuthorList): Wrote
	MakeAuthorList() today. Given a string with authors
	separated by 'and' it returns a list of dictionaries
	of the separate authors. The dictionary has First, Middle,
	Last, and Suffix entries

2012-07-30  James Fowler  <jrf12@James-Fowlers-MacBook-Pro.local>

	* Data/Testing/entry.py (parseAuthors):  modified parseAuthors to
	check for editors and compilers.  Still need to split names into
	first, middle and last.

2012-07-30  Jim Fowler  <jrf@Biblion>

	* Data/Testing/entry.py: added entry() class as a super class
	for AJBentry() and someday for AAAentry()

2012-07-28  Jim Fowler  <jrf@Biblion>

	* Data/Testing/ajb.py (AJBentry.__init__): Wrote initial class
	definition and the function __init__(), pprint(), and extract()
	for the AJBentry script

2012-07-21  Jim Fowler  <jrf@Biblion>

	* Data/Testing/ajb.py: Changed over to a module and
	an AjbEntry() class that does all the parsing.

2012-07-20  Jim Fowler  <jrf@Biblion>

	* Data/Testing/ajb.py: Started working on python script
	to parse the ajb??_books.txt file

2012-06-15  James Fowler  <jrf12@James-Fowlers-MacBook-Pro.local>

	* WebPages/Collecting.txt: Added Independent Online Booksellers
	Association to webpages.

2012-05-28  James Fowler  <jrf12@James-Fowlers-MacBook-Pro.local>

	* autotools: Removed aclocal.m4, install.sh, COPYING, and missing
	from git tracking.  These files were different on each of my
	machines and it was difficult to push/pull to the repositories.

	* Docs/TimeLine.ods: updated some entries.

2012-02-23  Jim Fowler  <jrf@Biblion>

	* WebPages/Collecting.txt: Added rarebooksdigest.com to the
	collecting page.

2012-02-05  Jim Fowler  <jrf@Biblion>

	* WebPages/Makefile.am: switched installation directory for
	the public web pages from $(PUBLICHTML) to $(htmldir). The
	$(htmldir) is a configure variable so I can specify it on
	the command line separately from $(prefix).
